k8s/apps/archi-steam-farm/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: archi-steam-farm
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
