k8s/apps/archi-steam-farm/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/justarchinet/archisteamfarm:6.3.10.3@sha256:446ef7f44cb7eba3aaa8b954fc62791f3bdd1a79c441d4cb39f59cac8a6986b9
          ports:
            - containerPort: 1242
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: plugins
              mountPath: /asf/plugins/external
              readOnly: true
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 640Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
      volumes:
        - name: config
          hostPath:
            path: /mnt/local/archi-steam-farm/config
            type: Directory
        - name: plugins
          hostPath:
            path: /mnt/local/archi-steam-farm/plugins
            type: Directory
        - name: tmp
          emptyDir: {}
      restartPolicy: Always
      hostname: archi-steam-farm
      securityContext:
        seccompProfile:
          type: RuntimeDefault
